--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,13 @@ body {
     color: #fff;
     max-width: 100vw; /* Maximale Breite für alle Geräte */
     margin: auto; /* Zentriere den Inhalt */
+    display: flex;
+    flex-direction: column;
+}
+
+html, body {
+    height: 100%;
+    overflow: hidden;
 }
 
 .container {
@@ -142,6 +149,8 @@ header {
     height: calc(100vh - 160px); /* Höhe anpassen, um Platz für Header und Navbar zu lassen */
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    flex: 1;
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling */
 }
 
 .content::-webkit-scrollbar {
@@ -414,6 +423,8 @@ a {
     height: calc(100vh - 160px); /* Höhe anpassen, um Platz für Header und Navbar zu lassen */
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    flex: 1;
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling */
 }
 
 .content::-webkit-scrollbar {
